# alx-backend-python

0x01-python_async_function/: 0-basic_async_syntax.py  1-concurrent_coroutines.py  2-measure_runtime.py  3-tasks.py  4-tasks.py
0x02-python_async_comprehension/: 0-async_generator.py  1-async_comprehension.py  2-measure_runtime.py
0x03-Unittests_and_integration_tests/: test_client.py  test_utils.py
Django-Middleware-0x03/0x03-MessagingApp-Django/: middleware.py  pyproject.toml
Django-Middleware-0x03/0x03-MessagingApp-Django/chats/: urls.py
Django-signals_orm-0x04/messaging/: urls.py  views.py
messaging_app/: Dockerfile  blue_deployment.yaml  db.sqlite3  docker-compose.yml  generate_postman.py  kubctl-0x02  kubctl-0x03  kubeservice.yaml  post_man-Collections  pyproject.toml  requirements.txt
messaging_app/chats/: auth.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
messaging_app/chats/migrations/: 0001_initial.py
messaging_app/messaging_app/: Jenkinsfile  Requirements.txt  blue_deployment.yaml  commands.txt  deployment.yaml  ingress.yaml  kubctl-0x01  kurbeScript  settings.py  urls.py
messaging_app/messaging_app/.github/workflows/: ci.yml  dep.yml
messaging_app/messaging_app/messaging_app/: settings.py
python-context-async-perations-0x02/: 0-databaseconnection.py  1-execute.py  3-concurrent.py  pyproject.toml
python-decorators-0x01/: 0-log_queries.py  1-with_db_connection.py  2-transactional.py  3-retry_on_failure.py  4-cache_query.py  README.md  setup_db.py  users.db
python-generators-0x00/: 0-stream_users.py  1-batch_processing.py  1-main.py  2-lazy_paginate.py  4-stream_ages.py  README.md  pyproject.toml  seed.py
