[tool.poetry]
name = "python-context-async-perations-0x02"
version = "0.1.0"
description = ""
authors = ["ForeverCountry <40751841+ForeverCountry@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
